k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: websocket-service
  namespace: christianmoore
  labels:
    app: websocket-server
spec:
  type: NodePort
  selector:
    app: websocket-server
  ports:
  - port: 80
    targetPort: 8080
    nodePort: 32449
    protocol: TCP
    name: websocket
